--- a/TEST/.settings/org.talend.repository.prefs
+++ b/TEST/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:t+wJz/bVwD+u10BA5IwDyVepRERRSQMli7Qg+cMN+vjrB4vzMlElca0\=
